--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,10 @@ repos:
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
-    -   id: trailing-whitespace
+    - id: trailing-whitespace
+    - id: check-added-large-files
+    - id: detect-private-key
+
 -   repo: https://github.com/psf/black
     rev: 22.8.0
     hooks:
