--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,15 @@ repos:
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
-    - id: trailing-whitespace
-    - id: check-added-large-files
-    - id: detect-private-key
+    -   id: trailing-whitespace
+    -   id: check-added-large-files
+    -   id: detect-private-key
 
 -   repo: https://github.com/psf/black
     rev: 22.8.0
     hooks:
     -   id: black
+-  repo: https://github.com/pre-commit/pygrep-hooks
+   rev: v1.9.0
+   hooks:
+   - id: python-use-type-annotations
