--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,13 @@ repos:
     rev: 22.8.0
     hooks:
     -   id: black
+
 -   repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
     hooks:
     - id: python-use-type-annotations
+
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.8.2
+    hooks:
+    -   id: reorder-python-imports
