--- a/environment.yaml
+++ b/environment.yaml
@@ -1,7 +1,7 @@
 name: del
 
 dependencies:
-  - python=3.9
+  - python=3.10
   - pip
   - pip:
     - pandas
@@ -13,4 +13,6 @@ dependencies:
     - tensorflow-datasets
     - jupyterlab
     - tqdm
-    - pre-commit
+    - torch
+    - torchvision
+    - torchaudio
