--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,5 @@ cython_debug/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode,jupyternotebooks
+
+data
