--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode,jupyternotebooks
 
 data
+.vscode
